# thyme

./: LICENSE  README.md  pyproject.toml  sample.ipynb
thyme/: cli.py
thyme/ai/: agent.py
thyme/ops/: __init__.py  codetools.py  io.py
thyme/types/ns/one/: __init__.py  generated.py
thyme/types/ns/two/: generated.py
thyme/types/reference/: __init__.py  ref.py
