[tool.poetry]
name = "thyme"
version = "0.1.0"
description = ""
authors = ["resonating-sirsh <amartey@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "^0.9.0"
loguru = "^0.7.2"
openai = "^0.28.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
thyme = "thyme.cli:app"